[package]
name = "ruforo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.12.0"
actix-multipart = "0.4.0-beta.10"
actix-session = { git = "https://github.com/actix/actix-extras" }
#actix-session = "0.5.0-beta.4"
actix-utils = "3.0.0"
actix-web = "4.0.0-beta.15"
actix-web-actors = "4.0.0-beta.8"
argon2 = "0.3.2"
askama = { git = "https://github.com/djc/askama", default-features = false, features = ["with-actix-web", "mime", "mime_guess"] }
askama_actix = { git = "https://github.com/djc/askama" }
#askama = { git = "https://git.kiwifarms.net/CrunkLord420/askama", branch = "crunk", default-features = false, features = ["with-actix-web", "mime", "mime_guess"] }
#askama_actix = { git = "https://git.kiwifarms.net/CrunkLord420/askama", branch = "crunk" }
#askama = { path = "../askama/askama", default-features = false, features = ["with-actix-web", "mime", "mime_guess"] }
#askama_actix = { path = "../askama/askama_actix" }
blake3 = "1.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
ffmpeg-next = "4.4.0"
futures = { version = "0.3.19", default-features = false }
futures-util =  { version = "0.3.19", default-features = false }
google-authenticator = { version = "0.3.0", features = [ "with-qrcode" ] }
lettre = { version = "0.10.0-rc.4", default-features = false, features = [ "rustls", "smtp-transport", "pool", "hostname", "builder" ] }
log = "0.4.14"
mime = "0.3.16"
once_cell = "1.9.0"
rand = "0.8.4"
rsass = "0.23.0"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
sea-orm = { version = "0.4.2", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ], default-features = false }
serde = "1.0.132"
serde_json = "1.0.73"
uuid = { version = "0.8.2", default-features = false, features = ["v4"] }

[dev-dependencies]
actix-rt = "2.5.0"
actix-test = "0.1.0-beta.9"
awc = "3.0.0-beta.14"
criterion = { version = "0.3.5", features = ["html_reports"] }

[profile.debugo]
inherits = "release"
debug = true

[[bench]]
name = "benchmark"
harness = false
